# EmulationStation

./: .gitmodules  CMakeLists.txt  cmake_b.cmd  cmake_es.cmd
.github/workflows/: codeql-analysis.yml  macos.yml  main.yml
es-app/: CMakeLists.txt
es-app/src/: CollectionSystemManager.cpp  FileData.cpp  PlatformId.cpp  PlatformId.h  ScraperCmdLine.cpp  VolumeControl.cpp  VolumeControl.h  main.cpp
es-app/src/components/: RatingComponent.cpp  TextListComponent.h
es-app/src/guis/: GuiMenu.cpp
es-app/src/scrapers/: GamesDBJSONScraper.cpp  Scraper.cpp  ScreenScraper.cpp  ScreenScraper.h
es-app/src/views/: ViewController.cpp
es-app/src/views/gamelist/: BasicGameListView.cpp  BasicGameListView.h  ISimpleGameListView.h
es-core/: CMakeLists.txt
es-core/src/: GuiComponent.cpp  InputConfig.cpp  InputConfig.h  InputManager.cpp  InputManager.h  PowerSaver.cpp  Window.cpp  Window.h
es-core/src/components/: DateTimeComponent.cpp  GridTileComponent.h  ImageComponent.cpp  ImageGridComponent.h  NinePatchComponent.cpp  TextComponent.cpp  VideoComponent.h  VideoVlcComponent.cpp  VideoVlcComponent.h
es-core/src/renderers/: Renderer.cpp  Renderer.h  Renderer_GL14.cpp  Renderer_GL21.cpp  Renderer_GLES20.cpp
es-core/src/resources/: Font.cpp  ResourceManager.cpp
es-core/src/utils/: CRC32.h  FileSystemUtil.cpp  FileSystemUtil.h  Hash.h  MD5.cpp  MD5.h  StringUtil.cpp  StringUtil.h
resources/: mamebioses.xml  mamedevices.xml  mamegen.sh  mamenames.xml
resources/macos/: EmulationStation.icns  Info.plist.in
